_sass/_styles.scss
// sass documentation https://sass-lang.com/documentation/modules/color/
// color.scale  // percentage of current value (scaling based on a space)
// color.adjust // fixed amount
// opacify

@use 'sass:color';

// $background-color: rgb(250, 210, 67);
$background-color: rgb(254, 139, 39);
$bold-color: rgb(255, 246, 68);
// $heading-color: lighten(o$bold-color, 5%);
$heading-color: rgb(21, 92, 185);
$text-color:  rgb(255, 255, 0);
$subtext-color: lighten($text-color, 5%);

$default-link-color: lighten($subtext-color, 5%);
$link-color-2: mix($text-color, $background-color, $weight: 60%);

// $muted-color: lighten($subtext-color, 12%);
$back-text-color: lighten($background-color, 8%);
$muted-color: rgb(23, 85, 166);
$small-screen-width: 600px;

$mono-font: 'Cutive Mono', monospace;
$serif-font:  'Spectral', 'Cutive', serif;
$san-serif-font: 'Raleway'; // unused
$secondary-font: $serif-font; // todo find a good secondary serif?

.rosarivo-regular {
  font-family: "Rosarivo", cursive;
  font-weight: 400;
  font-style: normal;
}

.rosarivo-regular-italic {
  font-family: "Rosarivo", cursive;
  font-weight: 400;
  font-style: italic;
}

.spectral-extralight {
  font-family: "Spectral", serif;
  font-weight: 200;
  font-style: normal;
}

.spectral-light {
  font-family: "Spectral", serif;
  font-weight: 300;
  font-style: normal;
}

.spectral-regular {
  font-family: "Spectral", serif;
  font-weight: 400;
  font-style: normal;
}

.spectral-medium {
  font-family: "Spectral", serif;
  font-weight: 500;
  font-style: normal;
}

.spectral-semibold {
  font-family: "Spectral", serif;
  font-weight: 600;
  font-style: normal;
}

.spectral-bold {
  font-family: "Spectral", serif;
  font-weight: 700;
  font-style: normal;
}

.spectral-extrabold {
  font-family: "Spectral", serif;
  font-weight: 800;
  font-style: normal;
}

.spectral-extralight-italic {
  font-family: "Spectral", serif;
  font-weight: 200;
  font-style: italic;
}

.spectral-light-italic {
  font-family: "Spectral", serif;
  font-weight: 300;
  font-style: italic;
}

.spectral-regular-italic {
  font-family: "Spectral", serif;
  font-weight: 400;
  font-style: italic;
}

.spectral-medium-italic {
  font-family: "Spectral", serif;
  font-weight: 500;
  font-style: italic;
}

.spectral-semibold-italic {
  font-family: "Spectral", serif;
  font-weight: 600;
  font-style: italic;
}

.spectral-bold-italic {
  font-family: "Spectral", serif;
  font-weight: 700;
  font-style: italic;
}

.spectral-extrabold-italic {
  font-family: "Spectral", serif;
  font-weight: 800;
  font-style: italic;
}

.shippori-mincho-b1-regular {
  font-family: "Shippori Mincho B1", serif;
  font-weight: 400;
  font-style: normal;
}

.bona-nova-regular {
  font-family: "Bona Nova", serif;
  font-weight: 400;
  font-style: normal;
}

.bona-nova-bold {
  font-family: "Bona Nova", serif;
  font-weight: 700;
  font-style: normal;
}

.bona-nova-regular-italic {
  font-family: "Bona Nova", serif;
  font-weight: 400;
  font-style: italic;
}

// <weight>: Use a value from 100 to 900

.raleway {
  font-family: "Raleway", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

body {
    font-family: $serif-font;
    font-size: 14px;
    padding: 0;
    margin: 0;
    background-color: $background-color;
    color: $text-color;
    overscroll-behavior: none;
}

@media (max-width: $small-screen-width) {
  body {
    height: 100vh;
  }
}

// change the highlight color
::selection {
  background-color: $text-color;
  color: $background-color;
}

.header {
  // text-decoration: underline;
  // margin-top: 4vh !important;
  color: $heading-color;
  font-family: $serif-font;
  // text-decoration-color: $subtext-color;
  border-bottom: 2px solid $heading-color;

}

// #hi {
//   position: fixed;
//   width: min(100vw, 100vh);
//   margin: 0 auto;
//   text-align: center;
//   // position: fixed;
//   top: 0;
//   left: 50%;
//   transform: translate(-50%);
//   // width: 100%;
//   // // make things hide behind it
//   // z-index: 100;
//   background-color: $background-color;
// }

#welcome {
  // initialize it at the bottom of #hi
  // position: absolute;
  // top: 0%;
  // left: 50%;
  // transform: translate(-50%);
  z-index: 100;
  background-color: $background-color;
  padding: 10px;
  border-radius: 10px;
}

// .frieze {
//   div {
//     position: relative;
//     width: 98%;
//     border-bottom: 1px solid $text-color;
//   }

//   .top {
//     margin: 0px auto 1px auto;
//   }

//   .bot {
//     margin: 0px auto 20px auto;
//   }
// }

.frieze {
  // div {
  //   position: relative;
  //   width: 98%;
  //   border-bottom: 1px solid $text-color;
  // }

  .top {
    margin: 0px auto 30px auto;
  }

  .bot {
    margin: 0px auto 30px auto;
  }
}

// remove all of the special formatting for a tags
a {
  color: $default-link-color;
  text-decoration: none;
  font-style: italic;
}

#contact {

    a {
    color: $link-color-2;
    text-decoration-color: $link-color-2;
  }
}

.breaker {
  // margin-top: 10px !important;
  // margin-bottom: 10px !important;
  height: 3vh;
}

p {
  margin: 0;
}

// raleway

.post p {
  margin-top: 1vh;
  margin-bottom: 2vh;
}

h2 {
  font-weight: normal;
  font-size: inherit;
  margin-bottom: 0;
}

.sub {
  color: $subtext-color;
  font-family: $secondary-font;
}

.sub a {

  line-height: 1;
}

#title {
  font-size: 24px;
  text-align: center;
  margin-top: 1em;
  margin-bottom: 1em;
  line-height: 1;
}

.content-wrapper {
  position: relative;
}

.heading-link {
  background-color: $text-color;
  color: $background-color;
  padding-left: 0.2em;
  padding-right: 0.2em;
  font-style: normal;
}

.heading-link:hover {
  font-style: italic;
}

#heading-content {
  width: min(100vw, 100vh);
  margin: 0 auto;
  text-align: center;
  font-family: $serif-font;
}

// #content > p, #content > a {
// important to make
#heading-content > * {
  font-size: 16px;
  width: 100%;
  margin: 0;
  padding: 0;
  display: block;
  line-height: 1;
  white-space: nowrap; /* Needs to be here or scaling won't work */
}

#heading-content > a {
  font-style: normal;
}

// Height gets set in text-resizeContentColumns
.content-columns {
  display: grid;
  grid-template-columns: 1fr 1fr; /* Two equal columns */
  width: min(100vw, 100vh);
  margin: 0 auto;
  text-align: center;
  font-family: $secondary-font;
  overflow: hidden;
  box-sizing: border-box;
  padding: 0;
  overscroll-behavior: none;
}

@media (max-width: $small-screen-width) {
  .content-columns {
    grid-template-columns: 1fr; /* Single column on small screens */
  }
}


.margin-overlay {
  position: absolute;
  z-index: 1;
  pointer-events: none; 
}

.marginalia {
  position: fixed;
  z-index: 2;
  width: 100px;
  left: 0px;
}

.marginalia-right {
  left: auto;
  right: 0px;
}

.column {
  width: 100%;
  padding: 0px;
  margin: 0px;
  // Enable scrolling instead of hiding overflow
  overflow-y: auto;
  // overflow-x: hidden;
  overflow-x: visible;
  box-sizing: border-box;
  
  // Hide scrollbars
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* Internet Explorer 10+ */
  
  /* Webkit browsers (Chrome, Safari, Edge) */
  &::-webkit-scrollbar {
    display: none;
  }
}

.column-right {
  z-index: 1000 !important;
}

@media (max-width: $small-screen-width) {
  .column {
    overflow-y: auto;
    height: 100vh;
  }
}

// Prevent fullwidth elements from expanding their containers
.fullwidth {
  overflow: hidden;
  overflow-x: hidden !important;
  font-size: 0.9em;
  width: 100%;
  margin-bottom: 0;
  margin-top: 0;
  line-height: 1;
}

.fullwidth.subheader {
  margin-top: 1vh;
}

.post {
  color: $text-color;
}

.post .tag {
  margin-bottom: 1vh;
  margin-top: 1vh;
  font-size: 0.8em;
}

// backwards davinci
.back {
  display: inline;
  color: $back-text-color;
  // font-style: italic;
  mix-blend-mode: difference;
  user-select: none;
}

.background-layer {
  word-break: break-all;
}

a:hover {
  text-decoration: underline;
  text-decoration-color: $text-color;
}

.tag {
  color: $muted-color;
}

.tag-link {
  position: relative;
  /* brightness controls the threshold point */
  filter: brightness(0.8) blur(3px) contrast(999);
}

.post-date {
  font-family: $san-serif-font;
  font-style: italic;
  color: $muted-color
}

.inverted-text {
  color: $background-color !important;
  background-color: lighten($text-color, 20%) !important;
  transition: cubic-bezier(0.075, 0.82, 0.165, 1);

  // background: 
  //   linear-gradient(20deg, lighten($text-color, 40%), transparent), 
  //   url(https://grainy-gradients.vercel.app/noise.svg),
  //   contrast(170%) brightness(1000%);
  // transition: linear 
}


.tag-link:hover {
  // remove the filter
  filter: none;
}

.tag-link.current-tag {
  filter: none;
}

.publication-content p.fullwidth.sub {
  // margin-bottom: 0.05vh;
  // margin-top: 0.05vh;
}

// Older Stuff

.project-link {
  // make it positioned so that we can scatter it around
  position: absolute;
  top: 0;
  left: 0;
}

.invert {
  color: rgb(51, 51, 51);
  // add the two colors together
  mix-blend-mode: calc(50% + 50%);
}

.post-image {
  width: 50%;
  transform: translate(50%);

}

#image1 {
  top: 55%;
  left: 0px;
  width: 140%;
  height: auto;
}

.mirror {
    display: inline-block;
    -moz-transform: scaleX(-1);
    -o-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    filter: FlipH;
    white-space: pre;
}

.background-layer {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    z-index: 1;
}

.content-layer {
    position: absolute;
    z-index: 2;
    pointer-events: auto;
    width: 100%;
    top: 10%;

}

.post-container {
    position: relative;
    margin: 0 auto;
    padding: 0 4%; /* More padding around content */
    max-width: 800px; /* Optional: limit content width */
}

/* Make selfie image monochrome using current color */
.monochrome {
    filter: grayscale(100%);
    opacity: 0.8;
    mix-blend-mode: multiply;
}

/* Apply monochrome to all marginalia images by default */
.marginalia, .marginalia-right {
    filter: grayscale(100%);
    opacity: 0.6;
    // transition: all 0.3s ease;
    pointer-events: auto;
    cursor: pointer;
}

/* Colorized state for images */
.marginalia.colorized, .marginalia-right.colorized {
    filter: none;
    opacity: 1;
}

/* Hover effects for publication items */
.publication-item {
    position: relative;
    transition: all 0.3s ease;
    cursor: pointer;
}

.publication-item.highlighted {
    background-color: rgba(115, 84, 48, 0.1);
}

